# tauri-plugin-shizuku

./: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
android/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
android/.tauri/tauri-api/src/main/java/app/tauri/plugin/: Invoke.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/app/tauri/shizuku/: ShizukuPlugin.kt
examples/tauri-app/: package.json  pnpm-lock.yaml  vite.config.js
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_system_property.toml  list_packages.toml  open_shizuku.toml  run_adb_command.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
