[package]
name = "tauri-plugin-shizuku"
version = "0.1.1"
authors = [ "ShizukuAqua" ]
description = ""
edition = "2024"
rust-version = "1.93.0"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-shizuku"

[dependencies]
tauri = { version = "2.8.5" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.4.0", features = ["build"] }
