[package]
name = "tauri-plugin-shizuku"
version = "0.1.1"
authors = [ "ShizukuAqua" ]
description = "A tauri plugin for Shizuku, providing various permissions and functionalities to interact with the Android system."
edition = "2024"
rust-version = "1.93.0"
license = "MIT"
documentation = "https://docs.rs/tauri-plugin-shizuku"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-shizuku"

[dependencies]
tauri = { version = "2.8.5" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.4.0", features = ["build"] }
