[package]
name = "Shizuku Test"
version = "0.1.1"
description = "A Tauri App"
authors = ["ShizukuAqua"]
license = "MIT"
repository = ""
edition = "2024"
rust-version = "1.93.0"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.1", default-features = false , features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-shizuku = { path = "../../../" }

